Fix contrast color to buttons and links

--- a/_scss/config/_colors.scss
+++ b/_scss/config/_colors.scss
@@ -8,9 +8,8 @@ $neutral-light: #e2e2e2 !default;
 $primary-color: #3CD52E !default;
 
 // base colors
-$link-color: #21272d !default;
-$link-hover-color: $primary-color !default;
-$base-text-color: #21272d !default;
+$text-color: #21272d !default;
+$link-color: #28951E !default;
 
 // module colors
 $heart-color: #e74c3c !default;
