--- a/_scss/modules/_post-participants.scss
+++ b/_scss/modules/_post-participants.scss
@@ -6,7 +6,7 @@
   }
 
   a {
-    color: $primary-color;
+    color: $link-color;
     font-weight: bold;
     text-decoration: none;
 
