--- a/_scss/modules/_post-support.scss
+++ b/_scss/modules/_post-support.scss
@@ -1,6 +1,6 @@
 .post-support {
   .highlight {
-    color: $primary-color;
+    color: $link-color;
     font-weight: bold;
     text-decoration: none;
 
